--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,14 +28,21 @@
   <link rel="stylesheet" type="text/css" href="/styles/inline.css">
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
 
-  <!-- CODELAB: Add link rel manifest -->
-  <!-- CODELAB: Add iOS meta tags and icons -->
-  <!-- CODELAB: Add description here -->
-  <!-- CODELAB: Add meta theme-color -->
-
+  <!-- link rel manifest -->
+  <link rel="manifest" href="/manifest.json">
+  <!-- iOS meta tags and icons -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Weather PWA">
+  <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png">
+  <!-- app description -->
+  <meta name="description" content="A sample weather app">
+  <!-- meta theme-color -->
+  <meta name="theme-color" content="#2F3BA2" />
 </head>
-<body>
 
+<body>
+`
   <header class="header">
     <h1>
       Weather PWA
@@ -92,9 +100,9 @@
             <span class="value"></span>
           </div>
           <div class="sunset">
-              <span class="label">Sunset:</span>
-              <span class="value"></span>
-            </div>
+            <span class="label">Sunset:</span>
+            <span class="value"></span>
+          </div>
         </div>
       </div>
       <div class="future">
@@ -207,4 +215,5 @@
   </script>
 
 </body>
+
 </html>
