--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,15 @@
   <script src="/scripts/app.js"></script>
   <!-- CODELAB: Add the install script here -->
   <script>
-    // CODELAB: Register service worker.
+    // Register service worker
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/service-worker.js')
+            .then((reg) => {
+              console.log('Service worker registered.', reg);
+            });
+      });
+    }
   </script>
 
 </body>
