--- a/public/index.html
+++ b/public/index.html
@@ -209,7 +209,8 @@
 
   <script src="/scripts/luxon-1.11.4.js"></script>
   <script src="/scripts/app.js"></script>
-  <!-- CODELAB: Add the install script here -->
+  <!-- Add the install script -->
+  <script src="/scripts/install.js"></script>
   <script>
     // Register service worker
     if ('serviceWorker' in navigator) {
