--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,6 @@
 </head>
 
 <body>
-`
   <header class="header">
     <h1>
       Weather PWA
@@ -60,11 +59,6 @@
       <span class="icon add"></span>
     </button>
 
-    <div id="about" class="weather-card">
-      <b>Your First Progressive Web App Codelab</b><br>
-      Get started at <a href="https://g.co/codelabs/pwa">https://g.co/codelabs/pwa</a>.
-    </div>
-
     <div id="weather-template" class="weather-card" hidden>
       <div class="card-spinner">
         <svg viewBox="0 0 32 32" width="32" height="32">
@@ -81,7 +75,13 @@
         <div class="visual">
           <div class="icon"></div>
           <div class="temperature">
-            <span class="value"></span><span class="scale">°F</span>
+            <span class="value"></span><span class="scale">°C</span>
+            <div class="description">  
+              <div class="feelsLike" style="font-size: 20px;">
+                <span class="label">Feels Like:</span>
+                <span class="value"></span><span class="scale">°C</span>
+              </div>
+            </div>
           </div>
         </div>
         <div class="description">
