--- a/public/index.html
+++ b/public/index.html
@@ -198,6 +198,8 @@
           <option value="37.757815,-122.5076401">San Francisco, USA</option>
           <option value="31.2243085,120.9162955">Shanghai, China</option>
           <option value="35.6735408,139.5703032">Tokyo, Japan</option>
+          <option value="27.4698,-153.0251">Brisbane, Australia</option>
+          <option value="44.6488,63.5752">Halifax, Canada</option>
         </select>
       </div>
       <div class="dialog-buttons">
